--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <div id="content">
+		<img src="./assets/figure.png" alt="IGTI">
+
 	<div id="seletores">
 		
 		<div>
@@ -14,21 +16,21 @@
 				<label for="rInput">(R)Red:</label>
 				<div class="elementos">	
 					<input id="rInput" type="range" min="0" max="255" value="0" step="1">
-					<input id="textRInput" disabled type="text" />
+					<input id="textRInput"  type="text" />
 				</div>
 			</div>
 			<div id="g">
 				<label for="gInput">(G)Green:</label>
 				<div class="elementos">
 					<input id="gInput" type="range" min="0" max="255" value="0"  step="1">
-					<input id="textGInput" disabled type="text" />
+					<input id="textGInput"  type="text" />
 				</div>
 			</div>
 			<div id="b">
 				<label for="bInput">(B)Blue:</label>
 				<div class="elementos">
 					<input id="bInput" type="range" min="0" max="255" value="0" step="1">
-					<input id="textBInput" disabled type="text" />
+					<input id="textBInput"  type="text" />
 				</div>
 			</div>
 		</div>
